# self-knowledge-base-retrieval

./: .env.example  .gitignore  LICENSE  Makefile  README.md  _mcp_implementation.md  pyproject.toml
data/: .gitkeep
docs/: architecture.puml
src/retrieval_assistant/: __init__.py  chunking.py  cli.py  config.py  discovery.py  embedding.py  fallback.html  ingest.py  mcp_server.py  parsing.py  rerank.py  routing.py  search.py  store.py  web.py
src/retrieval_assistant/static/: index.html
src/retrieval_assistant/static/assets/: index-CGEPTXnN.js  index-DENDUtm0.css
tests/: test_chunking.py  test_code_chunking.py  test_rerank.py  test_routing.py
ui/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  index.css
